LF-3403 Fix visibility toggle layer

--- a/packages/webapp/src/components/Form/Input/input.module.scss
+++ b/packages/webapp/src/components/Form/Input/input.module.scss
@@ -96,6 +96,7 @@ input:focus::placeholder {
   font-size: 22px;
   color: var(--iconDefault);
   cursor: pointer;
+  z-index: 10;
 }
 .labelContainer {
   display: flex;
